# por-copilot-bridge

./: README.md  pyproject.toml
.github/workflows/: auto_resonance.yml
docs/: architecture.md  risk_taxonomy.md  silence_as_control_integration.md  v01_scope.md
examples/: config_mutation_gate.py  por_payload_demo.py
src/por_copilot_bridge/: __init__.py  bridge.py  evidence.py  models.py  por_adapter.py  risk_rules.py  router.py
tests/: test_bridge_decisions.py  test_evidence.py  test_por_adapter.py  test_por_payload_demo.py  test_risk_rules.py
