[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "por-copilot-bridge"
version = "0.1.0"
description = "Deterministic release-governance bridge for AI coding-agent outputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SemeAIPletinnya" }]
keywords = ["release-governance", "ai-coding-agents", "deterministic", "risk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
